2000-05-11  Lauris Kaplinski  <lauris@ariman.ee>

	* src/desktop-events.c: Collected events to separate file
	Added guidline and grid positioning skeleton

	* src/helper/sp-guide.*: Guideline implementation
 
2000-05-10  Lauris Kaplinski  <lauris@ariman.ee>

	* glade/*.xpm: Some new icons (thanks to Jeff Mrochuk)

	* src/knot.*: signals clicked, grabbed, ungrabbed, moved
	Many fixes and enhancements

	* src/seltrans.c: Use knots instead of Ctrl canvas items
 
2000-05-09  Michael Meeks  <michael@helixcode.com>

	* src/bonobo/svg-doc-factory.c (sp_svg_doc_factory_init): add
	config.h + OAFIID.

 	* Makefile.am: Install oaf data.
 
 	* src/main.c (main): re-tool for oaf.

	* configure.in: Check for oaf.
 
2000-05-06  Lauris Kaplinski  <lauris@ariman.ee>

	* src/knot.h: Added signals "grab", "ungrab" and "move"
	* src/knot.c: Implemented signals, event etc.

2000-05-05  Lauris Kaplinski  <lauris@ariman.ee>

	* src/desktop-handles.h: Added SP_DT_IS_EDITABLE
	* src/knot.*: started implementing universal handle object for
	all contexts

2000-05-05  Lauris Kaplinski  <lauris@ariman.ee>

	* src/Makefile.am: Define $gladedir, which has been forgotten :)
	* src/sp-image.c (sp_image_print): Do it :)

2000-05-03  Lauris Kaplinski  <lauris@ariman.ee>

	* src/main.c: Uncommented line interpreting unknown command-line
	arguments as filenames
	* src/document-undo.c (sp_document_undo): If attribute is 'id', find
	affected object from 'new' instead of 'key'
	* src/dialogs/xml-tree.c: Added missing sp_document_done flushes
	* src/sp-object.c (sp_object_read_attr): Fixed def-ing repr
	id attribute instead of objects one

2000-05-02  Lauris Kaplinski  <lauris@ariman.ee>

	* src/sp-item-group.c (sp_group_build): Check that xml node is
	known, before trying to build object from it

2000-05-02  Lauris Kaplinski  <lauris@ariman.ee>

	* src/sp-gradient.*: Implemented skeleton for gradient fills
	* src/sp-object-repr.c: Gradient parsing

2000-05-01  Lauris Kaplinski  <lauris@ariman.ee>
